# klax

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  NOTICE  README.md  flake.nix  index.html  mkdocs.yml  objects.inv  pyproject.toml  temp.py
.github/workflows/: gh-pages.yml  publish-testpypi.yml  run-tests.yml
api/callbacks/: index.html
api/losses/: index.html
api/nn/linear/: index.html
api/nn/matrices/: index.html
api/nn/mlp/: index.html
api/serialization/: index.html
api/training/: index.html
api/wrappers/: index.html
docs/: index.md
docs/api/: callbacks.md  initialization.md  losses.md  serialization.md  training.md
docs/examples/: continued_training.py  isotropic_hyperelasticity.ipynb  no_data_training.py  reduce_on_plateau.py  sample_weighting.ipynb  training_without_data.ipynb
docs/source/: conf.py  examples.rst  index.rst  klax.callbacks.rst  klax.losses.rst  klax.nn.rst  klax.rst  klax.typing.rst  klax.wrappers.rst
docs/source/_autosummary/: klax.Callback.rst  klax.CallbackArgs.rst  klax.HistoryCallback.rst  klax.Loss.rst  klax.NonNegative.rst  klax.ParameterWrapper.rst  klax.batch_data.rst  klax.fit.rst  klax.mse.rst  klax.nn.ConstantMatrix.rst  klax.nn.ConstantSPDMatrix.rst  klax.nn.ConstantSkewSymmetricMatrix.rst  klax.nn.Linear.rst  klax.nn.MLP.rst  klax.nn.Matrix.rst  klax.nn.SPDMatrix.rst  klax.nn.SkewSymmetricMatrix.rst  klax.split_data.rst
docs/source/_templates/autosummary/: class.rst
docs/source/examples/: continued_training.py  isotropic_hyperelasticity.ipynb
docs/stylesheets/: extra.css
examples/: continued_training.py  isotropic_hyperelasticity.ipynb  no_data_training.py  reduce_on_plateau.py
examples/isotropic_hyperelasticity/: index.html
examples/training_without_data/: index.html
klax/: __init__.py  _callbacks.py  _context.py  _datahandler.py  _initializers.py  _losses.py  _misc.py  _new_training.py  _serialization.py  _training.py  _trainstate.py  _updaters.py  _wrappers.py  callbacks.py  constraints.py  datahandler.py  losses.py  training.py  typing.py  wrappers.py
klax/nn/: __init__.py  _icnn.py  _isnn.py  _linear.py  _matrices.py  _misc.py  _mlp.py
scripts/: ficnn_non_neg_profiling.py  ficnn_profiling.py  icnn_initialization_comparison.py  matrix_profiling.py  mlp_comparison_eqx.py  non_neg_wrapper_test.py  weight_constraint_comparison.py
search/: search_index.json
tests/: conftest.py  test_callbacks.py  test_datahandler.py  test_nn.py  test_serialization.py  test_training.py  test_wrappers.py
