[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "klax"
version = "0.1.0"
description = "A lightweight machine learning pacakge for computational mechanics."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name = "Drenderer", email = "some@email.com" },
    { name = "jaosch", email = "jasper.schommartz@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "equinox>=0.12.2",
    "jax>=0.6.0",
    "optax>=0.2.4",
    "paramax>=0.0.3",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
Repository = "https://github.com/Drenderer/klax"
Issues = "https://github.com/jaosch/feap-caller/klax"

[project.optional-dependencies]
plot = [
    "matplotlib>=3.10.3",
]
docs = [
    "sphinx>=8.2.3",
    "sphinx-autodoc-typehints>=3.2.0",
    "sphinx-book-theme>=1.1.4",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.10",
]

[tool.hatch.build.targets.wheel]
packages = ["klax"]

[tool.pytest.ini_options]
addopts = "-p no:faulthandler"
testpaths = ["tests"]

[tool.ruff]
line-length = 79
